# mycppserver

./: .gitignore
client/: CMakeLists.txt
client/src/: Client.cpp  Client.h  main.cpp
httpServer/: .DockerIgnore  CMakeLists.txt  Dockerfile
httpServer/src/: Connection.cpp  Connection.h  Server.cpp
server/: CMakeLists.txt  Dockerfile
server/src/: Connection.cpp  Connection.h  Server.h  main.cpp
